# skywatch

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  Start-SkyWatch-Docker.bat  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_raw_states.py  0002_create_trajectories.py  0003_create_anomaly_scores.py
backend/skywatch/: __init__.py  collector.py  config.py  eda.py  evaluate.py  export_demo.py  features.py  inject.py  physics.py  reconstruct.py
backend/skywatch/api/: __init__.py  main.py  scoring.py  service.py
backend/skywatch/db/: __init__.py  base.py  models.py  session.py
backend/skywatch/model/: __init__.py  dataset.py  factory.py  lstm.py  score.py  train.py  transformer.py
backend/skywatch/model/artifacts/: lstm.pt  model_config.json  scaler.joblib  threshold.json
backend/skywatch/opensky/: __init__.py  client.py  parser.py  token_manager.py
backend/tests/: conftest.py  test_client.py  test_features.py  test_inject.py  test_model.py  test_parser.py  test_physics.py  test_reconstruct.py  test_scoring.py  test_token_manager.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AircraftDetails.tsx  AnomalyPanel.tsx  FlightMap.tsx  ScoreTimeline.tsx
frontend/src/lib/: api.ts  config.ts  ws.ts
scripts/: start-docker-clean.ps1
